--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,30 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+
+        <!-- Version Compilador 23 -->
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <!-- Dependencias -->
+    <dependencies>
+
+        <!-- Dependencia MySQL -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.1.0</version>
+        </dependency>
+
+        <!-- Dependencia Hibernate Core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.3.Final</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
